# letslearnmcppy

./: .gitignore  README.md  main.py  pyproject.toml
examples/: README.md
examples/fastmcp_basic/: README.md  config.json  server.py
examples/fastmcp_basic/resources/: __init__.py  config.py  help.py  logs.py
examples/fastmcp_basic/tools/: __init__.py  calculator.py  file_reader.py  text_processor.py  weather.py
